<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_cours"
        android:title="@string/menu_Cours" />

    <item
    android:id="@+id/navigation_dashboard"
    android:icon="@drawable/ic_chat_black_24dp"
    android:title="@string/menu_Tchat" />

    <item
        android:id="@+id/navigation_liste_enfant"
        android:icon="@drawable/ic_school"
        android:title="@string/menu_ListeEnfant" />

    <item
        android:id="@+id/navigation_Recommandation"
        android:icon="@drawable/ic_advertising"
        android:title="@string/menu_Recommandation" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_Profil" />


</menu>
